--- a/flirdog/src/main/webapp/package.json
+++ b/flirdog/src/main/webapp/package.json
@@ -8,6 +8,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@jridgewell/sourcemap-codec": "^1.4.15",
+    "@opuscapita/react-dates": "^0.5.16",
+    "@syncfusion/ej2-react-calendars": "^23.1.41",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,13 +21,19 @@
     "@types/react-dom": "^18.2.14",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
+    "ciqu-react-calendar": "^1.0.2",
     "class-enum": "^0.1.1",
+    "jquery": "^3.7.1",
     "mdb-react-ui-kit": "^7.0.0",
+    "moment": "^2.29.4",
+    "primereact": "^10.0.9",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-calendar": "^4.6.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "sassy-datepicker": "^0.10.2",
     "stable": "^0.1.8",
     "styled-components": "^6.1.1",
     "svgo": "^3.0.3",
