--- a/flirdog/src/main/webapp/package.json
+++ b/flirdog/src/main/webapp/package.json
@@ -14,6 +14,7 @@
     "mdb-react-ui-kit": "^7.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
