--- a/bin/main/naver.properties
+++ b/bin/main/naver.properties
@@ -1,4 +1,6 @@
-ncp.accessKey=L9RqYtbbT9buq0DXbcq2
-ncp.secretKey=07saHQw93tBVGhl1TxLyFTY3TCTKWBAgF5Iv9FOW
+# ncp.accessKey=L9RqYtbbT9buq0DXbcq2
+# ncp.secretKey=07saHQw93tBVGhl1TxLyFTY3TCTKWBAgF5Iv9FOW
+ncp.accessKey=pkwXGIJal3ojKdJrk32V
+ncp.secretKey=Bk6oaFq0Z9Nchg4Fa0MqdjZQvnmx20FgVZoeRWc2
 ncp.regionName=kr-standard
 ncp.endPoint=https://kr.object.ncloudstorage.com
