--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -26,7 +26,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "recoil": "^0.7.7",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.9.0",
     "tui-color-picker": "^2.2.8",
     "typescript": "^4.9.5",
