--- a/build.gradle
+++ b/build.gradle
@@ -39,9 +39,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.2'
 
-	// File upload
-    implementation 'commons-fileupload:commons-fileupload:1.4'
-    implementation 'commons-io:commons-io:2.8.0'
+	// // File upload
+    // implementation 'commons-fileupload:commons-fileupload:1.4'
+    // implementation 'commons-io:commons-io:2.8.0'
 
 	//jakarta
 	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
