기능:상품조회 및 삭제,일괄삭제, 상품수정(이미지제외) 기능구현완료

--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ repositories {
 }
 
 dependencies {
+
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+
 	// 기본적으로 필요한 스프링부트 의존성
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -56,6 +59,7 @@ dependencies {
 
 	//s3
 	implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.4.4'
+
 }
 
 tasks.named('test') {
