--- a/src/main/webapp/tsconfig.json
+++ b/src/main/webapp/tsconfig.json
@@ -22,6 +22,7 @@
   },
   "include": [
     "src/components/product/**/*",
+    "src/components/message/**/*",
     "src/css/product/**/*"
   ],
   "exclude": [
