--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
     "moment": "^2.29.4",
+    "openai": "^4.20.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-bootstrap-icons": "^1.10.3",
