--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -30,6 +30,8 @@
     "react-slick": "^0.29.0",
     "recoil": "^0.7.7",
     "slick-carousel": "^1.8.1",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "sweetalert2": "^11.10.0",
     "tui-color-picker": "^2.2.8",
     "typescript": "^4.9.5",
