--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -15,11 +15,14 @@
     "@types/node": "^16.18.59",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
+    "@types/sockjs-client": "^1.5.4",
+    "@types/stompjs": "^2.3.9",
     "axios": "^1.6.0",
     "class-enum": "^0.1.1",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
     "moment": "^2.29.4",
+    "net": "^1.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-bootstrap-icons": "^1.10.3",
@@ -35,7 +38,8 @@
     "sweetalert2": "^11.10.0",
     "tui-color-picker": "^2.2.8",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "websocket": "^1.0.34"
   },
   "scripts": {
     "start": "react-scripts start",
