--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -38,8 +38,7 @@
     "sweetalert2": "^11.10.0",
     "tui-color-picker": "^2.2.8",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "websocket": "^1.0.34"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
