--- a/bin/main/application.yml
+++ b/bin/main/application.yml
@@ -17,10 +17,15 @@ spring:
       on-profile: local
 
   datasource:
-    url: jdbc:mysql://db-jgnl0-kr.vpc-pub-cdb.ntruss.com:3306/maindb?serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true&useSSL=false
+    # url: jdbc:mysql://db-jgnl0-kr.vpc-pub-cdb.ntruss.com:3306/maindb?serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true&useSSL=false
+    # driver-class-name: com.mysql.cj.jdbc.Driver
+    # username: user
+    # password: qwe123!@#
+    # s3문제
+    url: jdbc:mysql://localhost:3306/maindb?serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true&useSSL=false
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: user
-    password: qwe123!@#
+    username: root
+    password: 1234
 
   jpa:
     hibernate:
