--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -6,6 +6,7 @@
     "@egjs/react-infinitegrid": "^4.11.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@looop/quill-image-resize-module-react": "^3.1.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -26,6 +27,7 @@
     "react-bootstrap-icons": "^1.10.3",
     "react-calendar": "^4.6.1",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
