--- a/src/main/resources/naver.properties
+++ b/src/main/resources/naver.properties
@@ -1,4 +1,10 @@
-ncp.accessKey=pkwXGIJal3ojKdJrk32V
-ncp.secretKey=Bk6oaFq0Z9Nchg4Fa0MqdjZQvnmx20FgVZoeRWc2
+#ncp.accessKey=pkwXGIJal3ojKdJrk32V
+#ncp.secretKey=Bk6oaFq0Z9Nchg4Fa0MqdjZQvnmx20FgVZoeRWc2
+#ncp.regionName=kr-standard
+#ncp.endPoint=https://kr.object.ncloudstorage.com
+
+
+ncp.accessKey=CXkkZc5veJMDyhgpGhHE
+ncp.secretKey=DIbP4XbDfry8vpm9X4GaAvtmG0cBStw6CcE8NCqe
 ncp.regionName=kr-standard
 ncp.endPoint=https://kr.object.ncloudstorage.com
