--- a/src/main/resources/naver.properties
+++ b/src/main/resources/naver.properties
@@ -1,4 +1,9 @@
-ncp.accessKey=pkwXGIJal3ojKdJrk32V
-ncp.secretKey=Bk6oaFq0Z9Nchg4Fa0MqdjZQvnmx20FgVZoeRWc2
+ncp.accessKey=fiTt7aZDR1OHxIvnufSt
+ncp.secretKey=2OvWaLKSufVKRJbR5f0xlXYIplMLJxsPvibmsnmk
 ncp.regionName=kr-standard
 ncp.endPoint=https://kr.object.ncloudstorage.com
+
+#ncp.accessKey=pkwXGIJal3ojKdJrk32V
+#ncp.secretKey=Bk6oaFq0Z9Nchg4Fa0MqdjZQvnmx20FgVZoeRWc2
+#ncp.regionName=kr-standard
+#ncp.endPoint=https://kr.object.ncloudstorage.com
