기능:주변애견매칭 모달작업 완료

--- a/build.gradle
+++ b/build.gradle
@@ -60,10 +60,14 @@ dependencies {
 	//s3
 	implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.4.4'
 
-	// //Twilio SDK 휴대전화 본인 인증
+	//spring security-지안
+	implementation 'org.json:json:20220320'
+
+
+	// //Twilio SDK 휴대전화 본인 인증-지안
 	// implementation 'com.twilio.sdk:twilio:8.8.0'
 
-	// //	coolSMS
+	// //	coolSMS-지안
 	// implementation 'net.nurigo:sdk:4.2.7'
 
 
