--- a/.classpath
+++ b/.classpath
@@ -26,11 +26,4 @@
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" output="bin/test" path="bin/generated-test-sources/annotations">
-		<attributes>
-			<attribute name="optional" value="true"/>
-			<attribute name="test" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="output" path="bin/default"/>
-</classpath>
+	<classpathentry kind="src" output="bin/test" path="bin/generated-t
