--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -26,6 +26,7 @@
     "react-bootstrap": "^2.9.1",
     "react-bootstrap-icons": "^1.10.3",
     "react-calendar": "^4.6.1",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.20.0",
