--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^18.2.17",
     "axios": "^1.6.2",
     "class-enum": "^0.1.1",
+    "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
     "moment": "^2.29.4",
