사진첩 등록 및  상세페이지 구현

--- a/bin/main/application.yml
+++ b/bin/main/application.yml
@@ -86,3 +86,8 @@ openai:
   key: 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
 # chatgpt: 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
 
+# 디버깅을 위한 로그 레벨 설정
+logging:
+  level:
+    root: DEBUG
+    org.springframework: DEBUG
