--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
     "axios": "^1.6.2",
+    "chart.js": "^4.4.1",
     "class-enum": "^0.1.1",
     "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
@@ -29,6 +30,7 @@
     "react-bootstrap": "^2.9.1",
     "react-bootstrap-icons": "^1.10.3",
     "react-calendar": "^4.6.1",
+    "react-chartjs-2": "^5.2.0",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-kakao-login": "^2.1.1",
