--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -23,6 +23,7 @@
     "class-enum": "^0.1.1",
     "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
+    "faker": "^6.6.6",
     "http-proxy-middleware": "^2.0.6",
     "moment": "^2.29.4",
     "openai": "^4.20.1",
