--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -77,6 +77,7 @@
   },
   "proxy": "http://127.0.0.1:8080",
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@types/sockjs-client": "^1.5.4"
   }
 }
