스타일 및 기능: 헤더 로그인/로그아웃 버튼 ai프로필이미지 마우스호버방식으로 변경

--- a/bin/main/application.yml
+++ b/bin/main/application.yml
@@ -49,7 +49,7 @@ spring:
 spring:
   data:
     mongodb:
-      host: k07fd.pub-vpc.mg.naverncp.com
+      host: k2hlg.pub-vpc.mg.naverncp.com
       port: 17017
       database: test
       username: user
