--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -70,7 +70,7 @@ spring:
 spring:
   data:
     mongodb:
-      host: k2hlg.pub-vpc.mg.naverncp.com
+      host: k2g36.vpc.mg.naverncp.com
       port: 17017
       database: flirdog
       username: user
