--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-# Server Port
 server:
   port: 8080
 
@@ -10,12 +9,33 @@ spring:
     hibernate:
       ddl-auto: none
 
+management:
+  endpoint:
+    health:
+      enabled: true
+    beans:
+      enabled: true
+    info:
+      enabled: true
+    conditions:
+      enabled: true
+    metrics:
+      enabled: true
+
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+        exclude:
+          - loggers
+          - quartz
+          - caches
+
 ---
 spring:
   config:
     activate:
       on-profile: local
-  # 아래 이미지크기제한 널널하게 잡음. - 정지안, 11/29
   servlet:
     multipart:
       max-file-size: 10MB
@@ -23,9 +43,9 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://db-ioa8o-kr.vpc-pub-cdb.ntruss.com:3306/studydb?serverTimezone=Asia/Seoul
-    username: study
-    password: bitcamp!@#123
+    url: jdbc:mysql://db-k2g2a.vpc-cdb.ntruss.com:3306/flirdog?serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true&useSSL=false
+    username: user
+    password: qwe123!@#
 
   jpa:
     hibernate:
@@ -42,49 +62,17 @@ spring:
 spring:
   kafka:
     consumer:
-      bootstrap-servers: 192.168.0.15:9092
+      bootstrap-servers: 10.0.3.16:9092
     producer:
-      bootstrap-servers: 192.168.0.15:9092
+      bootstrap-servers: 10.0.3.16:9092
+
 ---
 spring:
   data:
     mongodb:
-      host: k2hlg.pub-vpc.mg.naverncp.com
+      database: flirdog
       port: 17017
-      database: test
+      host: k2g36.vpc.mg.naverncp.com
+      authentication-database: admin
       username: user
       password: qwe123!@#
----
-spring:
-  config:
-    activate:
-      on-profile: test
-
-  datasource:
-    url: jdbc:mysql://db-k0790-kr.vpc-pub-cdb.ntruss.com:3306/test?serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true&useSSL=false
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    username: user
-    password: qwe123!@#
-
-  jpa:
-    hibernate:
-      ddl-auto: none
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-    database: mysql
-    database-platform: org.hibernate.dialect.MySQL8Dialect
-
-  sql:
-    init:
-      mode: never
-openai:
-  key: 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
-# chatgpt: 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
-
-# 디버깅을 위한 로그 레벨 설정
-logging:
-  level:
-    root: DEBUG
-    org.springframework: DEBUG
